remarks and some corrections