@@ -1,28 +1,29 @@
 package com.adaptionsoft.games.uglytrivia;
 
-import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.*;
 
 public class Game {
+	// La list accepte les doublons, il faut utiliser Set dans ce cas
     ArrayList players = new ArrayList();
     int[] places = new int[6];
     int[] purses  = new int[6];
     boolean[] inPenaltyBox  = new boolean[6];
-    
-    LinkedList popQuestions = new LinkedList();
-    LinkedList scienceQuestions = new LinkedList();
-    LinkedList sportsQuestions = new LinkedList();
-    LinkedList rockQuestions = new LinkedList();
-    
+
+	List<String> popQuestions = new ArrayList<>(50);
+	List<String> scienceQuestions = new ArrayList<>(50);
+	List<String> sportsQuestions = new ArrayList<>(50);
+	List<String> rockQuestions = new ArrayList<>(50);
+
     int currentPlayer = 0;
     boolean isGettingOutOfPenaltyBox;
-    
+
+    // ajout du java documentation pour simplifier la lecture et la maintenance
     public  Game(){
     	for (int i = 0; i < 50; i++) {
-			popQuestions.addLast("Pop Question " + i);
-			scienceQuestions.addLast(("Science Question " + i));
-			sportsQuestions.addLast(("Sports Question " + i));
-			rockQuestions.addLast(createRockQuestion(i));
+			popQuestions.add("Pop Question " + i);
+			scienceQuestions.add(("Science Question " + i));
+			sportsQuestions.add(("Sports Question " + i));
+			rockQuestions.add(createRockQuestion(i));
     	}
     }
 
@@ -41,7 +42,8 @@ public class Game {
 	    places[howManyPlayers()] = 0;
 	    purses[howManyPlayers()] = 0;
 	    inPenaltyBox[howManyPlayers()] = false;
-	    
+
+	    // utilisation d'un système de log au lieu de 'System.out.println'
 	    System.out.println(playerName + " was added");
 	    System.out.println("They are player number " + players.size());
 		return true;
@@ -52,23 +54,27 @@ public class Game {
 	}
 
 	public void roll(int roll) {
-		System.out.println(players.get(currentPlayer) + " is the current player");
-		System.out.println("They have rolled a " + roll);
-		
-		if (inPenaltyBox[currentPlayer]) {
-			if (roll % 2 != 0) {
-				isGettingOutOfPenaltyBox = true;
-				
-				System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
-				movePlayerAndAskQuestion(roll);
-			} else {
-				System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
-				isGettingOutOfPenaltyBox = false;
-				}
-			
-		} else {
+		if (isPlayable()) {
+			System.out.println(players.get(currentPlayer) + " is the current player");
+			System.out.println("They have rolled a " + roll);
 
-			movePlayerAndAskQuestion(roll);
+			if (inPenaltyBox[currentPlayer]) {
+				if (roll % 2 != 0) {
+					isGettingOutOfPenaltyBox = true;
+
+					System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
+					movePlayerAndAskQuestion(roll);
+				} else {
+					System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
+					isGettingOutOfPenaltyBox = false;
+				}
+
+			} else {
+
+				movePlayerAndAskQuestion(roll);
+			}
+		} else {
+			System.err.println("Le nombre maximum de joueurs n'est pas atteint ");
 		}
 		
 	}
@@ -80,33 +86,45 @@ public class Game {
 		System.out.println(players.get(currentPlayer)
                 + "'s new location is "
                 + places[currentPlayer]);
-		System.out.println("The category is " + currentCategory());
+		System.out.println("The category is " + currentCategory().getCategory());
 		askQuestion();
 	}
 
 	private void askQuestion() {
-		if (currentCategory() == "Pop")
-			System.out.println(popQuestions.removeFirst());
-		if (currentCategory() == "Science")
-			System.out.println(scienceQuestions.removeFirst());
-		if (currentCategory() == "Sports")
-			System.out.println(sportsQuestions.removeFirst());
-		if (currentCategory() == "Rock")
-			System.out.println(rockQuestions.removeFirst());		
+		switch (currentCategory()) {
+			case POP:
+				System.out.println(popQuestions.remove(0));
+				break;
+			case SCIENCE:
+				System.out.println(scienceQuestions.remove(0));
+				break;
+			case SPORTS:
+				System.out.println(sportsQuestions.remove(0));
+				break;
+			default:
+				System.out.println(rockQuestions.remove(0));
+				break;
+		}
 	}
 	
 	
-	private String currentCategory() {
-		if (places[currentPlayer] == 0) return "Pop";
-		if (places[currentPlayer] == 4) return "Pop";
-		if (places[currentPlayer] == 8) return "Pop";
-		if (places[currentPlayer] == 1) return "Science";
-		if (places[currentPlayer] == 5) return "Science";
-		if (places[currentPlayer] == 9) return "Science";
-		if (places[currentPlayer] == 2) return "Sports";
-		if (places[currentPlayer] == 6) return "Sports";
-		if (places[currentPlayer] == 10) return "Sports";
-		return "Rock";
+	private QuestionCategory currentCategory() {
+		switch (places[currentPlayer]) {
+			case 0:
+			case 4:
+			case 8:
+				return QuestionCategory.POP;
+			case 1:
+			case 5:
+			case 9:
+				return QuestionCategory.SCIENCE;
+			case 2:
+			case 6:
+			case 10:
+				return QuestionCategory.SPORTS;
+			default:
+				return QuestionCategory.ROCK;
+		}
 	}
 
 	public boolean wasCorrectlyAnswered() {
@@ -121,9 +139,7 @@ public class Game {
 						+ purses[currentPlayer]
 						+ " Gold Coins.");
 
-				boolean winner = didPlayerWin();
-
-				return winner;
+				return didPlayerWin();
 			} else {
 				currentPlayer++;
 				if (currentPlayer == players.size()) currentPlayer = 0;
@@ -141,11 +157,10 @@ public class Game {
 					+ purses[currentPlayer]
 					+ " Gold Coins.");
 			
-			boolean winner = didPlayerWin();
 			currentPlayer++;
 			if (currentPlayer == players.size()) currentPlayer = 0;
 			
-			return winner;
+			return didPlayerWin();
 		}
 	}
 	
@@ -161,6 +176,6 @@ public class Game {
 
 
 	private boolean didPlayerWin() {
-		return !(purses[currentPlayer] == 6);
+		return purses[currentPlayer] != 6;
 	}
 }
